@@ -5,26 +5,30 @@ import com.sprint.mission.discodeit.dto.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.MessageUpdateRequest;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.service.MessageService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-@Controller
+@Tag(name = "Message", description = "Message API")
+@RestController
 @RequiredArgsConstructor
-@RequestMapping("/api/message")
+@RequestMapping("/api/messages")
 public class MessageController {
     private final MessageService messageService;
 
@@ -41,11 +45,22 @@ public class MessageController {
                         throw new RuntimeException(e);
                     }
         })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @RequestMapping(value = "/create", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<Message> create(@RequestPart("messageCreateRequest")MessageCreateRequest messageCreateRequest, @RequestPart(value = "attachmentFiles", required = false)List<MultipartFile> attachmentFiles) {
+    @Operation(summary = "Message 생성")
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "201", description = "Message가 성공적으로 생성됨",
+                    content = @Content(schema = @Schema(implementation = Message.class))
+            ),
+            @ApiResponse(
+                    responseCode = "404", description = "Channel 또는 User를 찾을 수 없음",
+                    content = @Content(examples = @ExampleObject(value = "Channel | Author with id {channelId | authorId} not found"))
+            ),
+    })
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<Message> create(@Parameter(description = "Message 생성 정보", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)) @RequestPart("messageCreateRequest")MessageCreateRequest messageCreateRequest, @Parameter(description = "Message 첨부 파일들", content = @Content(mediaType = MediaType.MULTIPART_FORM_DATA_VALUE)) @RequestPart(value = "attachmentFiles", required = false)List<MultipartFile> attachmentFiles) {
         List<BinaryContentCreateRequest> attachments = Optional.ofNullable(attachmentFiles)
                 .map(this::resolveAttachmentFile)
                 .orElse(List.of());
@@ -57,24 +72,51 @@ public class MessageController {
     }
 
 
-    @RequestMapping(path = "update")
-    public ResponseEntity<Message> update(@RequestParam("messageId") UUID messageId, @RequestBody MessageUpdateRequest request) {
+    @Operation(summary = "Message 내용 수정")
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", description = "Message가 성공적으로 수정됨",
+                    content = @Content(schema = @Schema(implementation = Message.class))
+            ),
+            @ApiResponse(
+                    responseCode = "404", description = "Message를 찾을 수 없음",
+                    content = @Content(examples = @ExampleObject(value = "Message with id {messageId} not found"))
+            ),
+    })
+    @PatchMapping(path = "{messageId}")
+    public ResponseEntity<Message> update(@Parameter(description = "수정할 Message ID") @PathVariable("messageId") UUID messageId, @Parameter(description = "수정할 Message 내용") @RequestBody MessageUpdateRequest request) {
         Message updatedMessage = messageService.updateMessageField(messageId, request);
         return ResponseEntity
                 .status(HttpStatus.OK)
                 .body(updatedMessage);
     }
 
-    @RequestMapping(path = "delete")
-    public ResponseEntity<Void> delete(@RequestParam("messageId") UUID messageId) {
+    @Operation(summary = "Message 삭제")
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "204", description = "Message가 성공적으로 삭제됨"
+            ),
+            @ApiResponse(
+                    responseCode = "404", description = "Message를 찾을 수 없음",
+                    content = @Content(examples = @ExampleObject(value = "Message with id {messageId} not found"))
+            ),
+    })
+    @DeleteMapping(path = "{messageId}")
+    public ResponseEntity<Void> delete(@Parameter(description = "삭제할 Message ID") @PathVariable("messageId") UUID messageId) {
         messageService.deleteMessageById(messageId);
         return ResponseEntity
                 .status(HttpStatus.NO_CONTENT)
                 .build();
     }
-
-    @RequestMapping("findAllByChannelId")
-    public ResponseEntity<List<Message>> findAllByChannelId(@RequestParam("channelId") UUID channelId) {
+    @Operation(summary = "Channel의 Message 목록 조회")
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", description = "Message 목록 조회 성공",
+                    content = @Content(array = @ArraySchema(schema = @Schema(implementation = Message.class)))
+            )
+    })
+    @GetMapping
+    public ResponseEntity<List<Message>> findAllByChannelId(@Parameter(description = "조회할 Channel ID") @RequestParam("channelId") UUID channelId) {
         List<Message> messages = messageService.readAllByChannelId(channelId);
         return ResponseEntity
                 .status(HttpStatus.OK)
